--- a/blocks/features.html
+++ b/blocks/features.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/DH-UI/assets/style.Bmz08iQ4.css" as="style">
     <link rel="preload stylesheet" href="/DH-UI/vp-icons.css" as="style">
     
-    <script type="module" src="/DH-UI/assets/app.DAiTzYue.js"></script>
+    <script type="module" src="/DH-UI/assets/app.BehhRkMS.js"></script>
     <link rel="preload" href="/DH-UI/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/DH-UI/assets/chunks/theme.BcNwpIyU.js">
+    <link rel="modulepreload" href="/DH-UI/assets/chunks/theme.CSsHf1WK.js">
     <link rel="modulepreload" href="/DH-UI/assets/chunks/framework.BpVvFBTM.js">
     <link rel="modulepreload" href="/DH-UI/assets/blocks_features.md.NS0OHdI6.lean.js">
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
