deploy: 8a498e51fe90b11eba59d5ce83c225a966eb46ee

--- a/events/templates-events.html
+++ b/events/templates-events.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/DH-UI/assets/style.Bmz08iQ4.css" as="style">
     <link rel="preload stylesheet" href="/DH-UI/vp-icons.css" as="style">
     
-    <script type="module" src="/DH-UI/assets/app.X2jYLIqb.js"></script>
+    <script type="module" src="/DH-UI/assets/app.BfGu2B7k.js"></script>
     <link rel="preload" href="/DH-UI/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/DH-UI/assets/chunks/theme.B8KQbdqV.js">
+    <link rel="modulepreload" href="/DH-UI/assets/chunks/theme.cxOGZDyC.js">
     <link rel="modulepreload" href="/DH-UI/assets/chunks/framework.Cn2V45QM.js">
     <link rel="modulepreload" href="/DH-UI/assets/events_templates-events.md.BHNJM_VV.lean.js">
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
