deploy: 8d153ef60cdda30ba6d7eb462a410a257d25c956

--- a/Pickers/equipment-picker.html
+++ b/Pickers/equipment-picker.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/Daggerheart-UI/assets/style.kuSJNTzX.css" as="style">
     <link rel="preload stylesheet" href="/Daggerheart-UI/vp-icons.css" as="style">
     
-    <script type="module" src="/Daggerheart-UI/assets/app.BEPMhHIK.js"></script>
+    <script type="module" src="/Daggerheart-UI/assets/app.2lKoqmhF.js"></script>
     <link rel="preload" href="/Daggerheart-UI/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/Daggerheart-UI/assets/chunks/theme.B7EDzwC6.js">
+    <link rel="modulepreload" href="/Daggerheart-UI/assets/chunks/theme.CkZ8uMeo.js">
     <link rel="modulepreload" href="/Daggerheart-UI/assets/chunks/framework.DvWQHGvG.js">
     <link rel="modulepreload" href="/Daggerheart-UI/assets/Pickers_equipment-picker.md.ByDA2XU6.lean.js">
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
