--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <link rel="preload stylesheet" href="/Daggerheart-UI/assets/style.kuSJNTzX.css" as="style">
     <link rel="preload stylesheet" href="/Daggerheart-UI/vp-icons.css" as="style">
     
-    <script type="module" src="/Daggerheart-UI/assets/app.BEPMhHIK.js"></script>
+    <script type="module" src="/Daggerheart-UI/assets/app.2lKoqmhF.js"></script>
     <link rel="preload" href="/Daggerheart-UI/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
     <script id="check-mac-os">document.documentElement.classList.toggle("mac",/Mac|iPhone|iPod|iPad/i.test(navigator.platform));</script>
